ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-gomessage
  namespace: gomessage
  annotations:
    cert-manager.io/cluster-issuer: prod-letsencrypt
    kubernetes.io/tls-acme: "true"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - "*.taycc.work"
      secretName: prod-tls-taycc-work
  rules:
    - host: gomessage.taycc.work
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: gomessage-svc
                port:
                  number: 7077
